--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crownluna",
+    "name": "scheduler_bot",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
@@ -11,8 +11,11 @@
     "description": "",
     "dependencies": {
         "axios": "^1.8.4",
+        "cron": "^4.1.3",
         "discord.js": "^14.18.0",
-        "dotenv": "^16.4.7"
+        "dotenv": "^16.4.7",
+        "sequelize": "^6.37.7",
+        "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
